--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "SpectreAlan",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "5.1.1",
     "next": "13.4.13",
+    "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "8.0.0"
