--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "SpectreAlan",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "5.1.1",
+    "@prisma/client": "^5.1.1",
     "next": "13.4.13",
     "prisma": "^5.1.1",
     "react": "18.2.0",
@@ -21,6 +21,6 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
-    "typescript": "4.5.5"
+    "typescript": "^5.1.6"
   }
 }
