--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "SpectreAlan",
   "license": "MIT",
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
     "@prisma/client": "^5.1.1",
+    "antd": "^5.8.3",
     "next": "13.4.13",
     "prisma": "^5.1.1",
     "react": "18.2.0",
