--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
