--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@ant-design/icons": "^5.2.5",
     "@prisma/client": "^5.1.1",
     "antd": "^5.8.3",
+    "autoprefixer": "10.4.15",
     "next": "13.4.13",
+    "postcss": "^8.4.28",
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "8.0.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
