--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
-    "antd": "^5.8.3",
+    "antd": "^5.10.0",
     "autoprefixer": "10.4.15",
     "next": "13.4.13",
+    "next-auth": "^4.23.2",
     "postcss": "^8.4.28",
     "prisma": "^5.1.1",
     "react": "18.2.0",
