--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@prisma/client": "^5.1.1",
     "antd": "^5.10.0",
     "autoprefixer": "10.4.15",
-    "babel-plugin-styled-components": "^2.1.4",
+    "bcrypt": "^5.1.1",
     "next": "13.4.13",
     "next-auth": "^4.23.2",
     "postcss": "^8.4.28",
@@ -24,7 +24,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "8.0.0",
-    "styled-components": "^6.0.9",
+    "sass": "^1.69.3",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
