--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.1.1",
     "antd": "^5.10.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "next": "13.4.13",
     "next-auth": "^4.23.2",
