--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^5.2.5",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "ali-oss": "^6.18.1",
     "antd": "^5.10.0",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
