--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.10.0",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.10",
     "next": "13.4.13",
     "next-auth": "^4.23.2",
     "postcss": "^8.4.28",
