添加文章详情页

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
+    "highlight.js": "^11.9.0",
+    "marked": "^9.1.2",
+    "marked-highlight": "^2.0.6",
     "next": "13.4.13",
     "next-auth": "^4.23.2",
     "postcss": "^8.4.28",
