--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-markdown": "8.0.0",
     "sass": "^1.69.3",
     "tailwindcss": "^3.3.3"
