--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "marked-highlight": "^2.0.6",
     "next": "13.4.13",
     "next-auth": "^4.23.2",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.28",
     "prisma": "^5.1.1",
     "react": "18.2.0",
